--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, Meet the Design Mind!</h1>
-				<p>I'm best known as Design Mind from <em>San Francisco</em> Trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, my name is Cara!</h1>
+				<p>I'm a design strategist from <em>Oakland, Ca</em> Trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
