--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:hi@caraabrown.com">email</a></li>
-        		<li><a href="https://github.com/caraabrown">github.com/designmind</a></li>
+        		<li><a href="https://github.com/caraabrown">github.com/caraabrown</a></li>
 			</ul>
 		</footer>
 	</body>
